--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -18,7 +18,7 @@
     <script src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" type="text/javascript"></script>
     
     <script type="text/javascript" src="/static/javascript/jwplayer/jwplayer.js"></script>
-    <script type="text/javascript" src="/static/plrpExplorer/js/activeVideoSegments.js"></script>
+    <script type="text/javascript" src="/static/xgds_video/js/activeVideoSegments.js"></script>
     <script type="text/javascript">jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";</script>
 
 {% endblock headExtras %}
@@ -49,10 +49,10 @@
 <table>
 <tr>
 
-{% for source in sourcesJson %}
-    <td>   
+{% for source in sources %}
+    <td>  
 	<div style="width:38%; float:left; text-align:left">Recorded Segment: {{ source.name }}</div> 
-	<div style="width:60%; float:left; text-align:right"><a class="mybutton" href="{% url activeSegments source.shortName %}" target="new">New Window</a>&nbsp;&nbsp;<a class="mybutton" href="{% url liveVideoFeed source.shortName %}">Live</a></div>
+	<div style="width:60%; float:left; text-align:right"><a class="mybutton" href="{% url recorded episode.shortName %}" target="new">New Window</a>&nbsp;&nbsp;<a class="mybutton" href="{% url liveVideoFeed source.shortName %}">Live</a></div>
 	<br>	
 	<br>
 
@@ -86,7 +86,7 @@
     var earliestSegTime = HMStoSeconds("{{ earliestTime }}");
     var latestSegTime = HMStoSeconds("{{ latestTime }}");
 
-    var episodeDict = "{{ episodeDict }}"
+    var episode = {{ episodeJson|safe }};
 
     setupSlider(episode);
     setupJWplayer(displaySegments, earliestSegTime, episode);
