--- a/xgds_video/templates/xgds_video/video_subnav.html
+++ b/xgds_video/templates/xgds_video/video_subnav.html
@@ -3,8 +3,8 @@
 <form id="streamForm">
 <div class="sitemenu-nav-secondary">
 	<ul>
-		<li {% currentnav liveVideoFeed %}><a href="{% url liveVideoFeed 'All' %}">Live</a></li>
-		<li {% currentnav activeSegments %}><a href="{% url activeSegments %}">Recorded</a></li>
+		<li{% currentnav xgds_video_live %}><a href="{% url xgds_video_live 'all' %}">Live</a></li>
+		<li {% currentnav xgds_video_recorded %}><a href="{% url xgds_video_live 'all' %}">Recorded</a></li>
   	</ul>
 </div>
 </form>
