--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -13,7 +13,7 @@
     {% endblock %}
     
     {% block sitemenu-content-secondary %}
-	{% include "video_subnav.html" %}
+	{% include "xgds_video/video_subnav.html" %}
     {% endblock %}
 	
 {% block contents %}
@@ -49,9 +49,9 @@ var maxWidth = getMaxWidth();
 </script>
 <div class="item" id="item{{ forloop.counter }}" style="background:#CACACA;  margin-bottom: 5px; padding: 8px;border-style:solid; border-width:2px;">
 	<div style="float:left; text-align: left"><b>Live feed: {{ feed.name }}</b></div>
-	<div style="float:right; text-align: right; padding-bottom:3px;"><a class="mybutton" href="{% url liveVideoFeed feed.shortName %}" target="{{ feed.shortName }}">New Window</a>&nbsp;&nbsp;
-		<a class="mybutton" href="{% url liveVideoFeed feed.shortName %}">Recorded</a></div>
-	{% include "video_notes.html" with data=form %}
+	<div style="float:right; text-align: right; padding-bottom:3px;"><a class="mybutton" href="{% url xgds_video_live feed.shortName %}">New Window</a>&nbsp;&nbsp;
+		<!--a class="mybutton" href="{#% url xgds_video_recorded episode.shortName feed.source.shortName %#}">Recorded</a--></div>
+	{% include "xgds_video/video_notes.html" with data=form %}
 	<script language="javascript" type="text/javascript">
 	  $("#item{{ forloop.counter }}").css({"width":maxWidth,"height":feedHeight+120}); 
 	  QT_WriteOBJECT('https://plrp.xgds.org/static/{{ feed.name }}Stream.mov', /* maxWidth */'100%', /* feedHeight */'100%', '', 'AUTOPLAY',
