--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -52,7 +52,16 @@
 {% for source in sources %}
     <td>  
 	<div style="width:38%; float:left; text-align:left">Recorded Segment: {{ source.name }}</div> 
-	<div style="width:60%; float:left; text-align:right"><a class="mybutton" href="{% url xgds_video_recorded episode.shortName source.shortName %}" target="new">New Window</a>&nbsp;&nbsp;<a class="mybutton" href="{% url xgds_video_live source.shortName %}">Live</a></div>
+	<div style="width:60%; float:left; text-align:right">
+
+<a class="mybutton" href="{% url xgds_video_recorded %}?source={{ source.shortName }}&episode={{ episode.shortName }}" target="new">New Window</a>&nbsp;&nbsp;
+  {% with feed=source.feed_set.all.0.shortName %}
+    {% if feed %}
+      <a class="mybutton" href="{% url xgds_video_live feed %}">Live</a>
+    {% endif %}
+  {% endwith %}
+</div>
+
 	<br>	
 	<br>
 
