work in progress note taking on video feeds

--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -63,3 +63,7 @@ var maxWidth = getMaxWidth();
 {% endfor %}
 </div>
 {% endblock %}
+
+{% block scripts %}
+<script type="text/javascript" src="{{STATIC_URL}}/xgds_video/js/video_notes_form.js"></script>
+{% endblock %}
