--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -10,6 +10,7 @@
 <div style="float:left; padding-top:2px; padding-bottom:2px; ">
 	<form id="create_note{{ form.index }}" action="" method="">
 		<input type="hidden" id="id_index" value="{{form.index}}"/>
+        <input type="hidden" id="id_extras" value="{{form.extras}}"/>
         <label for="id_content">Note:</label>
         <input id="id_content" type="text" name="content" maxlength="500" size="20"/>
         <label for="id_label">Label:</label>
@@ -25,7 +26,6 @@
 <script type="text/javascript">
 var submitNoteUrl = "{% url record_notes %}";
 </script>
-<script type="text/javascript" src="{{STATIC_URL}}/xgds_video/js/video_notes_form.js"></script>
 <!-- 
 $(document).ready(function(){
     {# include {{STATIC_URL}}"/xgds_video/js/notes_tags.js" #}
