--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load url from future %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
     {% block nav %}
@@ -54,10 +55,10 @@
 	<div style="width:38%; float:left; text-align:left">Recorded Segment: {{ source.name }}</div> 
 	<div style="width:60%; float:left; text-align:right">
 
-<a class="mybutton" href="{% url xgds_video_recorded %}?source={{ source.shortName }}&episode={{ episode.shortName }}" target="new">New Window</a>&nbsp;&nbsp;
+<a class="mybutton" href="{% url 'xgds_video_recorded' %}?source={{ source.shortName }}&episode={{ episode.shortName }}" target="new">New Window</a>&nbsp;&nbsp;
   {% with feed=source.feed_set.all.0.shortName %}
     {% if feed %}
-      <a class="mybutton" href="{% url xgds_video_live feed %}">Live</a>
+      <a class="mybutton" href="{% url 'xgds_video_live' feed %}">Live</a>
     {% endif %}
   {% endwith %}
 </div>
