--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -2,16 +2,16 @@
 
 
 {% block cssExtras %}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery-ui.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery.tagsinput.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery-ui-1.8.18.custom.css"></link>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style/jquery-ui.css"></link>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style/jquery-ui-1.8.18.custom.css"></link>
 {% endblock cssExtras %}
 
 {% with form=data %}
 <div style="float:left; padding-top:2px; padding-bottom:2px; ">
 	<form id="create_note{{ form.index }}" action="" method="POST">
-		<input type="hidden" id="id_index" value="{{form.index}}"/>
-        <input type="hidden" id="id_extras" value="{{form.extras}}"/>
+		<input type="hidden" id="id_index" value="{{ form.index }}"/>
+        <input type="hidden" id="id_extras" value="{{ form.extras }}"/>
         <input type="hidden" id="id_eventTie" value="now"/>
         <label for="id_content">Note:</label>
         <input id="id_content" type="text" name="content" maxlength="500" size="20"/>
@@ -61,14 +61,14 @@ $(document).ready(function() {
 -->
 <!-- 
 $(document).ready(function(){
-    {# include {{STATIC_URL}}"/xgds_video/js/notes_tags.js" #}
+    {# include {{ STATIC_URL }}"xgds_video/js/notes_tags.js" #}
 });
 -->
 {% endblock jsInit %}
 
 {% block scripts %}
 <script type="text/javascript">var submitNoteUrl = "{% url 'record_simple' %}";</script>
-<script type="text/javascript" src="{{STATIC_URL}}/javascript/jquery.form.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}/javascript/jquery-ui-1.8.18.custom.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}/javascript/jquery.tagsinput.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery.form.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}javascript/jquery-ui-1.8.18.custom.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}javascript/jquery.tagsinput.js"></script>
 {% endblock scripts %}
