--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="/static/jquery/js/jquery-ui.js"></script>
     <link rel="stylesheet" href="/static/jquery/css/jquery-ui.css"/>
 
-    <script src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" ></script>
     
     <script type="text/javascript" src="/static/javascript/jwplayer/jwplayer.js"></script>
     <script type="text/javascript" src="/static/xgds_video/js/activeVideoSegments.js"></script>
