--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block headExtras %}
- {{ block.super }}
+{{block.super}}
+ <script src="{{ STATIC_URL }}jquery/js/jquery.js" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}javascript/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" type="text/javascript"></script>
- <script src="{{ STATIC_URL }}external/js/jquery.min.js" type="text/javascript"></script>
 {% endblock headExtras %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
@@ -59,7 +59,7 @@ var maxWidth = getMaxWidth();
 	<div style="float:left; text-align: left"><b>Live feed: {{ feed.name }}</b></div>
 	<div style="float:right; text-align: right; padding-bottom:3px;"><a class="mybutton" href="{% url xgds_video_live feed.shortName %}">New Window</a>&nbsp;&nbsp;
 		<a class="mybutton" href="{% url xgds_video_recorded %}?source={{ feed.source.shortName }}">Recorded</a></div>
-	{# include "xgds_video/video_notes.html" with data=form #}
+	{% include "xgds_video/video_notes.html" with data=form %}
 	<script language="javascript" type="text/javascript">
 	  $("#item{{ forloop.counter }}").css({"width":size[0],"height":size[1]+100}); 
 	  QT_WriteOBJECT('https://plrp.xgds.org/static/{{ feed.name }}Stream.mov',  '100%', /* feedHeight */'100%', '', 'AUTOPLAY',
@@ -72,20 +72,30 @@ var maxWidth = getMaxWidth();
 </div>
 {% endblock %}
 
-{% block scripts %}
-<script type="text/javascript" src="{{STATIC_URL}}/xgds_video/js/video_notes_form.js"></script>
-{% endblock %}
+{% block cssExtras %}
+ {{ block.super }}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery-ui.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery-ui-1.8.18.custom.css"></link>
+{% endblock cssExtras %}
 
- {% block jsInit %}
-<script type="text/javascript">
-var $container = $('#container');
-$container.masonry('bindResize')
-/* $(window).resize(function(){
-    if(detector.outerWidth(true)!=curWidth){
-        curWidth = detector.outerWidth(true);
-        $wall.masonry( 'option', { columnWidth: curWidth });
-    }
-}); */
-</script>
-{% endblock %}
+{% block scripts %}
+ {{ block.super }}
+ <script src="{{STATIC_URL}}jquery/js/jquery.form.min.js" type="text/javascript" ></script>
+ <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
+<script type="text/javascript" src="{{STATIC_URL}}xgds_video/js/video_notes_form.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}javascript/jquery-ui-1.8.18.custom.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}javascript/jquery.tagsinput.js"></script>
+{% endblock scripts %}
+
+{% block jsInit %}
+//prepare the form when the DOM is ready 
+$(document).ready(function() { 
+	// bind form using 'ajaxForm' 
+	{% for feed, form in videoFeedData %}
+    $('#create_note{{ form.index }}').ajaxForm(options);
+    {% endfor %}
+}); 
+{% endblock jsInit %}
+
 
