seekToTime works now

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -53,10 +53,10 @@
                         <i id="playbutton" class="fa fa-pause fa-2x"></i>
                     </a>
                 </div>
-                <form name="signin" action="#" method="POST">
-                <input  id="seekTime" type="text" name="text-input" placeholder="&#xf017; play from time (HH:MM:SS)" class="stylish"/><br/>
-                <input type="submit" value="&#xf01e; seek" class="stylish" onclick=seekToTime() />
-                </form>
+                <div>
+                    <input  id="seekTime" type="text" name="text-input" placeholder="&#xf017; play from time (HH:MM:SS)" class="stylish"/><br/>
+                    <input type="submit" value="&#xf01e; seek" class="stylish" onclick=seekToTime() />
+                </div>
             </div>
         </div>
 
